Fixes #667 (No.2) Offer Date is right aligned but should be left aligned

--- a/src/components/page-offers/offer-data/offer-data.less
+++ b/src/components/page-offers/offer-data/offer-data.less
@@ -10,7 +10,7 @@ offer-data {
     }
   }
 
-  .offer-date {
+  .offer-date-created {
     float: right;
     text-transform: initial;
     font-size: @font-size-xsmall;
